--- a/public/index.html
+++ b/public/index.html
@@ -45,5 +45,6 @@
             // https://dashboard.emailjs.com/admin/account
             emailjs.init('BSlf-pskiI8hJKY2i');
         })();
+      </script>
   </body>
 </html>
